--- a/DivisionBySubtractions.csproj
+++ b/DivisionBySubtractions.csproj
@@ -1,12 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
-    <AssemblyVersion>2022.5.13.51</AssemblyVersion>
-    <FileVersion>2022.5.13.51</FileVersion>
+    <AssemblyVersion>2024.4.27.55</AssemblyVersion>
+    <FileVersion>2024.4.27.55</FileVersion>
     <AssemblyName>dbs</AssemblyName>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove=".gitattributes" />
+    <None Remove=".gitignore" />
+  </ItemGroup>
 </Project>
